Bug 1902156 - Account for continuations to remove anonymous wrappers. r=dholbert, a=RyanVM

Since RemoveFrame also removes them and would leave the wrapping box
empty.

Differential Revision: https://phabricator.services.mozilla.com/D213542