layout/base/nsCSSFrameConstructor.cpp
@@ -7182,7 +7182,10 @@ static bool IsWhitespaceFrame(const nsIFrame* aFrame) {
 static bool IsOnlyNonWhitespaceFrameInList(const nsFrameList& aFrameList,
                                            const nsIFrame* aFrame) {
   for (const nsIFrame* f : aFrameList) {
-    if (f != aFrame && !IsWhitespaceFrame(f)) {
+    if (f == aFrame) {
+      // If we have continuations, ignore them too.
+      aFrame = aFrame->GetNextContinuation();
+    } else if (!IsWhitespaceFrame(f)) {
       return false;
     }
   }
